# rust_auth

./: .gitignore  docker-compose.yml
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/utils/: jwt_utils.rs
frontend/: package.json  vite.config.js
frontend/src/: index.tsx
frontend/src/pages/: NotFound.tsx
frontend/src/pages/auth/: Login.tsx
frontend/src/store/: Auth.tsx
frontend/src/utils/: Cookies.ts
