[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["macros"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "macros",
  "chrono",
  "postgres",
] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.16"
jsonwebtoken = "9.3.0"
